fix nodeApiVersionTest